<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_itunes_music"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tv_search"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        app:bl_corners_radius="40dp"
        app:bl_solid_color="@color/black_50"
        android:hint="@string/common_search"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_sorting_option"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_off"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/common_off"
            android:checked="true"
            android:background="@null"/>
        <RadioButton
            android:id="@+id/radio_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/common_price_sort"
            android:checked="false"
            android:background="@null"/>
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/retry"
            android:visibility="gone"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/common_retry"/>
    </FrameLayout>

</LinearLayout>